deployment.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    run: mysql
  name: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      run: mysql
  template:
    metadata:
      labels:
        run: mysql
        app: webshop
        version: "5.7.9"
    spec:
      containers:
      - image: docker.io/saigyouu/web-shop-db-image:latest
        name: web-shop-db-image
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: mysql
    app: webshop
  name: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: mysql

---

######################################################
#                    PRODUCT                         #
######################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: product
  name: product
spec:
  replicas: 3
  selector:
    matchLabels:
      run: product
  template:
    metadata:
      labels:
        run: product
        app: webshop 
        version: "1.0"
    spec:
      containers:
      - image: docker.io/saigyouu/product:latest
        name: product
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: product
    app: webshop
  name: product
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    run: product

---

######################################################
#                    CATEGORY                        #
######################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: category
  name: category
spec:
  replicas: 3
  selector:
    matchLabels:
      run: category
  template:
    metadata:
      labels:
        run: category
        app: webshop 
        version: "1.0"
    spec:
      containers:
      - image: docker.io/saigyouu/category:latest
        name: category
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: category
    app: webshop
  name: category
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8080
  selector:
    run: category

---

######################################################
#                    LEGACY                          #
######################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: legacywebshop
  name: legacywebshop
spec:
  replicas: 1
  selector:
    matchLabels:
      run: legacywebshop
  template:
    metadata:
      labels:
        run: legacywebshop
        app: webshop 
        version: "1.0"
    spec:
      containers:
      - image: docker.io/saigyouu/legacywebshop:latest
        name: legacywebshop
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: legacywebshop
    app: webshop
  name: legacywebshop
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8080
  selector:
    run: legacywebshop

---

######################################################
#                    APACHE                          #
######################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: apache
  name: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      run: apache
  template:
    metadata:
      labels:
        run: apache
    spec:
      containers:
      - image: docker.io/saigyouu/apache:latest
        imagePullPolicy: Always
        name: apache
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: apache
  name: apache
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: apache
  type: LoadBalancer
